workspace.members = [ "pakka_core", "pakka_macro"]
[package]
name = "pakka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }

[dependencies]
futures = "0.3.30"
pakka_macro = { path = "pakka_macro" }
tokio = { workspace = true }
kanal = "0.1.0-pre8" # Add this behind feature flag.
duration_helper = "0.1.0"

[dev-dependencies] # These used in the examples
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
