workspace.members = [ "lakka_core", "lakka_macro"]
[package]
name = "lakka"
description = "Simple actors with macros"
repository = "https://github.com/defic/lakka"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["actor"]

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }

[dependencies]
futures = "0.3.31"
lakka_macro = { path = "lakka_macro" }
tokio = { workspace = true }
kanal = "0.1.0-pre8" # Add this behind feature flag.
duration_helper = "0.1.0"

[dev-dependencies] # These used in the examples
bincode = "1.3.3"
serde = { version = "1.0.204", features = ["derive"] }

[lib]
