workspace.members = [ "lakka_core", "lakka_macro"]
[package]
edition = "2021"
name = "lakka"
description = "Simple actors with macros"
repository = "https://github.com/defic/lakka"
license = "MIT OR Apache-2.0"
readme = "README.md"
version = "0.1.0"
keywords = ["actor"]

[workspace.dependencies]
tokio = { version = "1.44", features = ["full"] }

[dependencies]
futures = "0.3.31"
lakka_macro = { path = "lakka_macro", version = "0.1.0" }
tokio = { workspace = true }
kanal = "0.1.0-pre8" # Add this behind feature flag.
duration_helper = "0.1.0"

[dev-dependencies] # These used in the examples
bincode = { version = "2.0.1", features = ["serde", "derive"] }
serde = { version = "1.0", features = ["derive"] }

[lib]
