[package]
name = "lakka_core"
version = "0.1.0"
edition = "2021"
description = "Simple actors with macros, part of lakka crate"
repository = "https://github.com/defic/lakka"
license = "MIT OR Apache-2.0"

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"


